<resources>
    <string name="app_name">TPEuropcar</string>


    <string name="liste_vehicules_dispo">Liste des véhicules disponibles</string>
    <string name="liste_vehicules_loue">Liste des véhicules loués</string>
    <string name="raison_sociale">Raison sociale :</string>
    <string name="siret">SIRET :</string>
    <string name="voie">Voie :</string>
    <string name="code_postal">Code postal :</string>
    <string name="ville">Ville :</string>
    <string name="modifier">MODIFIER</string>
    <string name="mail_utilisateur">Mail utilisateur :</string>
    <string name="mot_de_passe">Mot de passe :</string>
    <string name="se_souvenir_de_moi">Se souvenir de moi</string>
    <string name="se_connecter">Se connecter</string>
    <string name="s_inscrire">S\'inscrire</string>
    <string name="confirmer_mdp">Confirmer le mot de passe</string>
    <string name="places_disponibles"> places disponibles</string>
    <string name="jours"> jours</string>
    <string name="devise_par_jour"> €/jour</string>
    <string name="devise">€</string>
    <string name="token">Token :</string>
</resources>
