<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp" >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/libelle_vehicule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FF00001A"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="Citroen C3 noire"/>

        <TextView
            android:id="@+id/id_vehicule"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="123456789"
            android:gravity="right"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/nombre_places"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="5"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/places_disponibles"/>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/loca_min_vehicule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" - "/>

        <TextView
            android:id="@+id/loca_max_vehicule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="6"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/jours"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tarif_min_vehicule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="75"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" - "/>

        <TextView
            android:id="@+id/tarif_max_vehicule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="85"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/devise_par_jour"
            />
    </LinearLayout>


</LinearLayout>